--- a/styles.v2.css
+++ b/styles.v2.css
@@ -497,35 +497,35 @@ p {
         flex-shrink: 0;
     }
     
-    /* Mobile desktop icons */
+    /* Mobile desktop icons - scaled to fit */
     .desktop-icon {
-        width: 80px;
-        height: 90px;
-        font-size: 11px;
-        padding: 6px;
+        width: 60px;
+        height: 70px;
+        font-size: 10px;
+        padding: 4px;
     }
     
     .desktop-icon img {
-        width: 40px;
-        height: 40px;
-        margin-bottom: 6px;
+        width: 32px;
+        height: 32px;
+        margin-bottom: 4px;
     }
     
-    /* Adjust icon positions for mobile */
-    .icon-finder { top: 50px; right: 15px; }
-    .icon-safari { top: 160px; right: 15px; }
-    .icon-mail { top: 270px; right: 15px; }
-    .icon-itunes { top: 380px; right: 15px; }
-    .icon-photoshop { top: 50px; right: 110px; }
-    .icon-terminal { top: 160px; right: 110px; }
-    .icon-xcode { top: 270px; right: 110px; }
-    .icon-github { top: 380px; right: 110px; }
-    .icon-notes { top: 50px; right: 205px; }
+    /* Adjust icon positions for mobile - fit within viewport */
+    .icon-finder { top: 45px; right: 10px; }
+    .icon-safari { top: 130px; right: 10px; }
+    .icon-mail { top: 215px; right: 10px; }
+    .icon-itunes { top: 300px; right: 10px; }
+    .icon-photoshop { top: 45px; right: 85px; }
+    .icon-terminal { top: 130px; right: 85px; }
+    .icon-xcode { top: 215px; right: 85px; }
+    .icon-github { top: 300px; right: 85px; }
+    .icon-notes { top: 45px; right: 160px; }
     
     /* Mobile windows - allow off-screen */
     .mac-window {
-        min-width: 300px;
-        min-height: 200px;
+        min-width: 280px;
+        min-height: 180px;
         max-width: none;
         max-height: none;
     }
@@ -585,8 +585,8 @@ p {
     
     /* Mobile notes window */
     .notes-window {
-        width: 300px;
-        height: 200px;
+        width: 280px;
+        height: 180px;
     }
     
     .notes-textarea {
@@ -624,31 +624,34 @@ p {
         display: inline-block;
     }
     
+    /* Small mobile desktop icons - even more compact */
     .desktop-icon {
-        width: 70px;
-        height: 80px;
-        font-size: 10px;
+        width: 50px;
+        height: 60px;
+        font-size: 9px;
+        padding: 3px;
     }
     
     .desktop-icon img {
-        width: 36px;
-        height: 36px;
+        width: 28px;
+        height: 28px;
+        margin-bottom: 3px;
     }
     
-    /* Stack icons vertically on very small screens */
-    .icon-finder { top: 60px; right: 10px; }
-    .icon-safari { top: 160px; right: 10px; }
-    .icon-mail { top: 260px; right: 10px; }
-    .icon-itunes { top: 360px; right: 10px; }
-    .icon-photoshop { top: 60px; right: 95px; }
-    .icon-terminal { top: 160px; right: 95px; }
-    .icon-xcode { top: 260px; right: 95px; }
-    .icon-github { top: 360px; right: 95px; }
-    .icon-notes { top: 60px; right: 180px; }
+    /* Stack icons in a more compact grid for very small screens */
+    .icon-finder { top: 50px; right: 8px; }
+    .icon-safari { top: 120px; right: 8px; }
+    .icon-mail { top: 190px; right: 8px; }
+    .icon-itunes { top: 260px; right: 8px; }
+    .icon-photoshop { top: 50px; right: 70px; }
+    .icon-terminal { top: 120px; right: 70px; }
+    .icon-xcode { top: 190px; right: 70px; }
+    .icon-github { top: 260px; right: 70px; }
+    .icon-notes { top: 50px; right: 132px; }
     
     .mac-window {
-        min-width: 280px;
-        min-height: 180px;
+        min-width: 260px;
+        min-height: 160px;
         max-width: none;
         max-height: none;
     }
@@ -668,8 +671,8 @@ p {
     }
     
     .notes-window {
-        width: 280px;
-        height: 180px;
+        width: 260px;
+        height: 160px;
     }
     
     /* Small mobile watermark - fixed positioning */
@@ -690,6 +693,40 @@ p {
         user-select: text;
         -webkit-touch-callout: default;
         -webkit-tap-highlight-color: transparent;
+    }
+}
+
+/* Extra small mobile devices */
+@media (max-width: 360px) {
+    .desktop-icon {
+        width: 45px;
+        height: 55px;
+        font-size: 8px;
+        padding: 2px;
+    }
+    
+    .desktop-icon img {
+        width: 24px;
+        height: 24px;
+        margin-bottom: 2px;
+    }
+    
+    /* Even more compact positioning */
+    .icon-finder { top: 45px; right: 5px; }
+    .icon-safari { top: 110px; right: 5px; }
+    .icon-mail { top: 175px; right: 5px; }
+    .icon-itunes { top: 240px; right: 5px; }
+    .icon-photoshop { top: 45px; right: 60px; }
+    .icon-terminal { top: 110px; right: 60px; }
+    .icon-xcode { top: 175px; right: 60px; }
+    .icon-github { top: 240px; right: 60px; }
+    .icon-notes { top: 45px; right: 115px; }
+    
+    .watermark {
+        font-size: 10px;
+        padding: 4px 6px;
+        bottom: 8px;
+        right: 8px;
     }
 }
 
