--- a/styles.v2.css
+++ b/styles.v2.css
@@ -598,6 +598,17 @@ p {
         -webkit-touch-callout: default;
         -webkit-tap-highlight-color: transparent;
     }
+    
+    /* Mobile Pokémon window */
+    .pokemon-window {
+        width: 320px;
+        height: 240px;
+    }
+    
+    .pokemon-gif {
+        max-width: 100%;
+        max-height: 100%;
+    }
 }
 
 @media (max-width: 480px) {
@@ -675,7 +686,12 @@ p {
         height: 160px;
     }
     
-    /* Small mobile watermark - fixed positioning */
+    /* Small mobile Pokémon window */
+    .pokemon-window {
+        width: 280px;
+        height: 200px;
+    }
+    
     .watermark {
         font-size: 11px;
         padding: 5px 8px;
@@ -693,6 +709,17 @@ p {
         user-select: text;
         -webkit-touch-callout: default;
         -webkit-tap-highlight-color: transparent;
+    }
+    
+    /* Mobile Pokémon window */
+    .pokemon-window {
+        width: 320px;
+        height: 240px;
+    }
+    
+    .pokemon-gif {
+        max-width: 100%;
+        max-height: 100%;
     }
 }
 
@@ -854,4 +881,54 @@ a, button, .classic-button, .desktop-icon, .info-item {
     z-index: 1;
     pointer-events: none;
     user-select: none;
+}
+
+/* Pokémon Window */
+.pokemon-window {
+    width: 400px;
+    height: 300px;
+}
+
+.pokemon-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    padding: 10px;
+}
+
+.pokemon-gif {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+    image-rendering: pixelated;
+    image-rendering: -moz-crisp-edges;
+    image-rendering: crisp-edges;
+}
+
+/* Mobile notes window */
+.notes-window {
+    width: 280px;
+    height: 180px;
+}
+
+.notes-textarea {
+    font-size: 14px;
+    -webkit-user-select: text;
+    -moz-user-select: text;
+    -ms-user-select: text;
+    user-select: text;
+    -webkit-touch-callout: default;
+    -webkit-tap-highlight-color: transparent;
+}
+
+/* Mobile Pokémon window */
+.pokemon-window {
+    width: 320px;
+    height: 240px;
+}
+
+.pokemon-gif {
+    max-width: 100%;
+    max-height: 100%;
 } 
